--- a/.tmux.conf
+++ b/.tmux.conf
@@ -4,13 +4,12 @@ set -g utf8
 set -g status-utf8 on
 set-window-option -g utf8 on
 set -g default-terminal "screen-256color"
-set-window-option -g xterm-keys on
+set-window-option -g xterm-keys off
 set-option -g default-shell /usr/bin/zsh
 
-# remap prefix to Control + a
-set -g prefix C-a
-set -g prefix C-a
-bind 'C-a' send-prefix
+# remap prefix to Control + q
+set -g prefix C-q
+bind 'C-q' send-prefix
 unbind C-b
 
 # Friendly numbering scheme
@@ -19,10 +18,7 @@ set -g base-index 1
 setw -g pane-base-index 1
 
 # Mouse on
-setw -g mode-mouse on
-setw -g mouse-select-pane on
-setw -g mouse-resize-pane on
-setw -g mouse-select-window on
+setw -g mouse on
 setw -g mouse-utf8 on
 
 # Scrolling shift-up/pgup
@@ -32,15 +28,6 @@ set -ga terminal-overrides ',screen*:cvvis=\E[34l\E[?25h'
 # Monitor activity
 setw -g monitor-activity on
 set -g visual-activity off
-
-## set window list colors (overwritten by powerline)
-# set-window-option -g window-status-fg black
-# set-window-option -g window-status-bg green
-# set-window-option -g window-status-attr dim
-
-# set-window-option -g window-status-current-fg brightgreen
-# set-window-option -g window-status-current-bg black
-# set-window-option -g window-status-current-attr bright
 
 # 1M lines history
 set -g history-limit 1000000
@@ -62,11 +49,32 @@ bind-key | split-window -h
 bind-key \ split-window -h -l 81 -d
 bind-key - split-window
 
-# Move around panes Alt-h/j/k/l
-bind-key -n M-k select-pane -U
-bind-key -n M-j select-pane -D
-bind-key -n M-h select-pane -L
-bind-key -n M-l select-pane -R
+# Move around panes Alt-h/j/k/l, or emacs windows if it's running
+bind -n M-h run "(tmux display-message -p '#{pane_current_command}' | grep -iq emacs && tmux send-keys M-h || tmux-switch -L) || tmux display-message 'no pane to the left'"
+bind -n M-l run "(tmux display-message -p '#{pane_current_command}' | grep -iq emacs && tmux send-keys M-l || tmux-switch -R) || tmux display-message 'no pane to the right'"
+bind -n M-k run "(tmux display-message -p '#{pane_current_command}' | grep -iq emacs && tmux send-keys M-k || tmux-switch -U) || tmux display-message 'no pane up'"
+bind -n M-j run "(tmux display-message -p '#{pane_current_command}' | grep -iq emacs && tmux send-keys M-j || tmux-switch -D) || tmux display-message 'no pane down'"
+# ADD THESE LINES TO YOUR EMACS CONFIG (~/.emacs or ~/.emacs.d/init.el)
+# ;; Try to move direction, which is supplied as arg
+# ;; If cannot move that direction, send a tmux command to do appropriate move
+# (defun windmove-emacs-or-tmux(dir tmux-cmd)
+#   (interactive)
+#   (if (ignore-errors (funcall (intern (concat "windmove-" dir))))
+#       nil                       ;; Moving within emacs
+#     (shell-command tmux-cmd)) ;; At edges, send command to tmux
+#   )
+# ;; Move between windows and panes with custom keybindings
+# (global-set-key (kbd "M-k")
+# 		'(lambda () (interactive) (windmove-emacs-or-tmux "up"    "tmux select-pane -U")))
+# (global-set-key (kbd "M-j")
+# 		'(lambda () (interactive) (windmove-emacs-or-tmux "down"  "tmux select-pane -D")))
+# (global-set-key (kbd "M-l")
+# 		'(lambda () (interactive) (windmove-emacs-or-tmux "right" "tmux select-pane -R")))
+# (global-set-key (kbd "M-h")
+#               '(lambda () (interactive) (windmove-emacs-or-tmux "left"  "tmux select-pane -L")))
+#
+# THE COMMAND tmux-switch DOES THE FOLLOWING (FEEL FREE TO MODIFY COLOR AND DURATION):
+# tmux select-pane $1; tmux select-pane -P 'bg=black'; sleep 0.1; tmux select-pane -P 'bg=default' 
 
 
 # Move around windows Alt-b/m
@@ -80,7 +88,7 @@ bind-key -n M-M swap-window -t +1
 # Save Buffer to file
 bind-key P command-prompt -p 'save history to filename:' \
                           -I '~/tmux.history' \
-			  'capture-pane -S -100000 ; save-buffer %1 ; delete-buffer'
+			  'capture-pane -S -10000000 ; save-buffer %1 ; delete-buffer'
 
 # Tie save-buffer to X clipboard
 bind-key C-c run "tmux save-buffer - | xsel -i -b"
