Try to switch tmux panes directly if tmux-switch script is not installed

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -50,10 +50,10 @@ bind-key \ split-window -h -l 81 -d
 bind-key - split-window
 
 # Move around panes Alt-h/j/k/l, or emacs windows if it's running
-bind -n M-h run "(tmux display-message -p '#{pane_current_command}' | grep -iq emacs && tmux send-keys M-h || tmux-switch -L) || tmux display-message 'no pane to the left'"
-bind -n M-l run "(tmux display-message -p '#{pane_current_command}' | grep -iq emacs && tmux send-keys M-l || tmux-switch -R) || tmux display-message 'no pane to the right'"
-bind -n M-k run "(tmux display-message -p '#{pane_current_command}' | grep -iq emacs && tmux send-keys M-k || tmux-switch -U) || tmux display-message 'no pane up'"
-bind -n M-j run "(tmux display-message -p '#{pane_current_command}' | grep -iq emacs && tmux send-keys M-j || tmux-switch -D) || tmux display-message 'no pane down'"
+bind -n M-h run "(tmux display-message -p '#{pane_current_command}' | grep -iq emacs && tmux send-keys M-h || tmux-switch -L || tmux select-pane -L) || tmux display-message 'no pane to the left'"
+bind -n M-l run "(tmux display-message -p '#{pane_current_command}' | grep -iq emacs && tmux send-keys M-l || tmux-switch -R || tmux select-pane -R) || tmux display-message 'no pane to the right'"
+bind -n M-k run "(tmux display-message -p '#{pane_current_command}' | grep -iq emacs && tmux send-keys M-k || tmux-switch -U || tmux select-pane -U) || tmux display-message 'no pane up'"
+bind -n M-j run "(tmux display-message -p '#{pane_current_command}' | grep -iq emacs && tmux send-keys M-j || tmux-switch -D || tmux select-pane -D) || tmux display-message 'no pane down'"
 # ADD THESE LINES TO YOUR EMACS CONFIG (~/.emacs or ~/.emacs.d/init.el)
 # ;; Try to move direction, which is supplied as arg
 # ;; If cannot move that direction, send a tmux command to do appropriate move
