Adapt to tmux 2.1 Add whell support back New status line to fallback on from powerline

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,8 +1,5 @@
 ################################ Options ################################
 # General options
-set -g utf8
-set -g status-utf8 on
-set-window-option -g utf8 on
 set -g default-terminal "screen-256color"
 set-window-option -g xterm-keys off
 set-option -g default-shell /usr/bin/zsh
@@ -19,7 +16,30 @@ setw -g pane-base-index 1
 
 # Mouse on
 setw -g mouse on
-setw -g mouse-utf8 on
+
+# == ACTIVATE SCROLLING ON MOUSE  WHEEL ==
+# if-shell shell-command command [command]
+#  -F don't execute shell-command, evaluate zero = false
+#  -t target-pane ('=' : mouse)
+# send-keys -M - mouse passthrough
+# #{mouse_any_flag} - "pane mouse any flag" (pane contains mouse-aware app)
+# #{pane_in_mode} - "pane is in any mode" (copy-mode)
+# copy-mode - start copy mode
+#  -e scrolling to the bottom should end copy mode
+bind -n WheelUpPane \
+     if-shell \
+     	      -F \
+	      -t = \
+	      "#{mouse_any_flag}" \
+	      "send-keys -M" \
+	      "if \
+	      	  -Ft= \
+		  '#{pane_in_mode}' \
+		  'send-keys -M' \
+		  'select-pane -t=; copy-mode -e; send-keys -M'"
+bind -n WheelDownPane select-pane -t= \; send-keys -M
+
+
 
 # Scrolling shift-up/pgup
 set -ga terminal-overrides ',xterm*:smcup@:rmcup@'
@@ -30,7 +50,7 @@ setw -g monitor-activity on
 set -g visual-activity off
 
 # 1M lines history
-set -g history-limit 1000000
+set -g history-limit 100000
 
 # Active pane visibility
 set -g message-style "bg=black,fg=white"
@@ -96,4 +116,15 @@ bind-key C-v run "xsel -b | tmux load-buffer -; tmux paste-buffer"
 bind-key -temacs-copy C-c copy-pipe "xsel -i -b"
 
 # Use powerline to generate the status line
-source '/usr/share/tmux/powerline.conf'
+if-shell "test -f '/usr/share/tmux/powerline.conf'" \
+	 "source '/usr/share/tmux/powerline.conf'" \
+	 '\
+		set -g status-style "bg=black,fg=brightgreen"; \
+		set -g status-right-style "bg=brightgreen,fg=black"; \
+		set -g status-left-style "bg=brightgreen,fg=black"; \
+		set -g status-left "[#S] (#{history_size}/#{history_limit}) > ";\
+		set -g status-left-length 20;\
+		set -g status-right "  #{=21:pane_title} %H:%M %d-%b-%y @#H";\
+		set -g window-status-activity-style "bg=default,fg=default";\
+		set -g window-status-current-style "bg=green,fg=black";\
+	 '
