Adapt copy-mode for tmux >2.4

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -113,7 +113,7 @@ bind-key P command-prompt -p 'save history to filename:' \
 # Tie save-buffer to X clipboard
 bind-key C-c run "tmux save-buffer - | xsel -i -b"
 bind-key C-v run "xsel -b | tmux load-buffer -; tmux paste-buffer"
-bind-key -temacs-copy C-c copy-pipe "xsel -i -b"
+bind-key -T emacs-copy C-c send-keys -X copy-pipe "xsel -i -b"
 
 # Use powerline to generate the status line
 if-shell "test -f '/usr/share/tmux/powerline.conf'" \
