Update split-window key binding

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -66,7 +66,7 @@ bind r source-file ~/.tmux.conf \; display-message "Configuration reloaded"
 
 # Split panes
 bind-key | split-window -h
-bind-key \ split-window -h -l 81 -d
+bind-key \\ split-window -h -l 81 -d
 bind-key - split-window
 
 # Move around panes Alt-h/j/k/l, or emacs windows if it's running
